# mili

./: Cargo.toml
src/: lib.rs  prelude.rs
src/bot/: client.rs  command.rs  connection.rs  implementation.rs  main.rs  mod.rs  template.rs
src/discord/: channel.rs  intents.rs  message.rs  mod.rs  snowflake_id.rs  token.rs  user.rs
src/discord/command/: localization.rs  metadata.rs  mod.rs  option.rs  template.rs
src/discord/gateway/: dispatch.rs  event.rs  identify.rs  mod.rs  recover_data.rs
